# RMNG

./: .dockerignore  .gitignore  CODEX_PARITY.md  Cargo.toml  Dockerfile  LXC_DOCKER_AUDIT.md  MACOS_PORT.md  README.md  TEMPLATE_AUTOSWAP_PLAN.md  ZEROCOPY_DECODE.md  ZEROCOPY_ENCODE.md  compose.yaml
agent-wrapper/: README.md  agent-instructions.md
agent-wrapper/src/: config.ts  instructions.test.ts  instructions.ts  server.ts
crates/cli/: Cargo.toml  README.md
crates/cli/src/: args.rs  commands.rs  main.rs  output.rs  wait.rs
crates/clone-daemon/: README.md
crates/clone-daemon/src/: clipboard.rs  detector.rs  main.rs  mcp.rs  mutter.rs  transport.rs
crates/control-client/: Cargo.toml  README.md
crates/control-client/src/: lib.rs
crates/control-server/: Cargo.toml  README.md
crates/control-server/embedded-bin/: .gitignore
crates/control-server/scripts/: apply-monitors.sh  bootstrap.sh  claude-import.sh  clone.sh  codex-import.sh  provision-clone.sh  redeploy.sh
crates/control-server/src/: app.rs  assets.rs  binswap.rs  buildinfra.rs  chat.rs  claude.rs  clone_ops.rs  clone_reconcile.rs  codex.rs  config.rs  docker.rs  files.rs  forward.rs  homes.rs  jobs.rs  main.rs  mcp.rs  mediaplane.rs  monitor.rs  orchestrate.rs  provision.rs  smb.rs  ssh.rs  state.rs  update.rs  web.rs
crates/media/: Cargo.toml  README.md
crates/media/src/: encode.rs  glpack.rs  lib.rs  screenshot.rs  sock.rs
crates/viewer/: Cargo.toml
crates/viewer/src/: config.rs  forward.rs  glunpack.rs  headless.rs  keyboard_macos.rs  kvk_evdev.rs  main.rs  native_titlebar.rs  pointer_lock_macos.rs
crates/wire/: Cargo.toml  README.md
crates/wire/src/: avc444.rs  config.rs  control.rs  exec.rs  forward.rs  lib.rs  mcp.rs  net.rs  socket.rs  viewer.rs
docs/: API.md  CLI.md  DEPLOY.md  DEVELOPMENT.md  INFRA.md  MCP.md  PROTOCOL.md  PROXMOX-LXC.md  SCRIPTS.md
docs/superpowers/plans/: 2026-07-03-auto-account-rotation.md  2026-07-03-codex-account-parity.md  2026-07-03-control-server-multi-viewer.md  2026-07-03-control-server-self-update.md  2026-07-03-editable-agent-playbook.md  2026-07-03-port-forwarding.md  2026-07-04-codex-reset-credits.md  2026-07-04-detector-feedback-smb-share.md  2026-07-04-dynamic-layout-presets.md  2026-07-04-fleet-cli.md  2026-07-04-phase0-spike-findings.md  2026-07-05-ssh-into-clones.md  2026-07-07-reset-aware-auto-account-rotation.md
docs/superpowers/specs/: 2026-07-03-auto-account-rotation-design.md  2026-07-03-control-server-multi-viewer-design.md  2026-07-03-editable-agent-playbook-design.md  2026-07-03-port-forwarding-design.md  2026-07-03-smb-clone-homes-design.md  2026-07-04-codex-reset-credits-design.md  2026-07-04-detector-feedback-smb-share-design.md  2026-07-04-dynamic-layout-presets-design.md  2026-07-05-cli-desktop-exec-remove-global-mcp-design.md  2026-07-05-shared-docker-build-infra-design.md  2026-07-05-ssh-into-clones-design.md  2026-07-08-macos-gdk-swallowed-keys-design.md  2026-07-08-macos-modifier-state-device-independent-design.md
frontend/: README.md  package.json
frontend/.storybook/: main.ts  preview.ts
frontend/app/: app.css  root.tsx
frontend/app/components/: AccountGroupSelect.tsx  ChangeAccountModal.test.ts  ChangeAccountModal.tsx  ChatPanel.tsx  ClaudeAccountsPanel.tsx  CloneModal.tsx  CommitImageModal.tsx  EnvChecklist.tsx  HostEditor.tsx  ImagePicker.stories.tsx  ImagePicker.tsx  ImagesSection.tsx  ImportAccountModal.tsx  ImportTokenModal.tsx  MonitorsEditor.tsx  NewTemplateModal.tsx  OperationProgress.tsx  PortForwardModal.tsx  SettingsPanel.stories.tsx  SettingsPanel.tsx  SetupWizard.tsx  Sidebar.stories.tsx  Sidebar.test.ts  Sidebar.tsx  SidebarHost.stories.tsx  SidebarHost.tsx  SshCommand.stories.tsx
frontend/app/lib/: api.ts  clipboard.ts  format.ts  ssh.ts  types.ts  useColorScheme.ts  workspace.ts
frontend/app/lib/wire/: AppConfigRedacted.ts  ChromaMode.ts  ClaudeConfig.ts  ClaudeUsage.ts  CloneGroup.ts  CodexConfig.ts  ConfigPutResponse.ts  ContainerStats.ts  ControlState.ts  DockerConfig.ts  EnvCheckRow.ts  ForwardRuntime.ts  ForwardState.ts  Host.ts  ImageInfo.ts  LayoutPreset.ts  ListenConfig.ts  Operation.ts  OperationKind.ts  PortForward.ts  PresetRedacted.ts  SetupEnv.ts  SshConfig.ts  UpdateStatus.ts
frontend/app/routes/: _index.tsx
frontend/app/stories/: PortForwardModal.stories.tsx  fixtures.ts
gnome-patch/: README.md
scripts/: cs-deploy-ct.sh  diag-keyboard-macos.sh  e2e-agent-playbook.sh  provision-build-ct.sh  provision-deploy-ct.sh  publish-server.sh  publish-template.sh
template/: Dockerfile
template/setup/: 10-desktop.sh  15-gnome-patch.sh  20-toolbox.sh  30-user.sh  lib.sh
