[package]
name = "rmng-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "rmng — fleet management CLI for the RMNG control-server (hosts, clones, images, accounts, operations)."

[[bin]]
name = "rmng"
path = "src/main.rs"

[dependencies]
wire.workspace = true
control-client.workspace = true
serde.workspace = true
clap.workspace = true
tokio.workspace = true
serde_json.workspace = true
anyhow.workspace = true
futures.workspace = true
