[package]
name = "control-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Typed reqwest + SSE client for the control-server port-2 web API (rmng CLI + integration tests)."

[dependencies]
wire.workspace = true
serde.workspace = true
reqwest.workspace = true
serde_json.workspace = true
anyhow.workspace = true
futures.workspace = true
tokio.workspace = true
