[package]
name = "viewer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Native GTK4 viewer (GUI + headless): port-1 connect, VA-API H.264 decode, dmabuf render, input + clipboard."

[[bin]]
name = "rmng-viewer"
path = "src/main.rs"

[dependencies]
wire.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
# VA-API H.264 decode via GStreamer (vah264dec). The GUI sink (GdkDmabufTexture)
# adds gtk4 in the next increment; the decode/transport core is toolkit-free so
# the headless test mode needs no display.
gstreamer = "0.23"
gstreamer-app = "0.23"
# BaseTransform/GLFilter subclassing for the zero-copy AVC444 GL unpacker (src/glunpack.rs).
gstreamer-base = "0.23"
gstreamer-video = { version = "0.23", features = ["v1_24"] }
gstreamer-allocators = "0.23"
gstreamer-gl = { version = "0.23", features = ["v1_24"] }
gtk4 = { version = "0.9", package = "gtk4", features = ["v4_14"] }
serde.workspace = true
serde_json.workspace = true

# Pointer-lock / relative mouse (Wayland only; gdk4-wayland links a C lib that
# does not exist on macOS).  The pointer_lock module is gated by the same cfg.
[target.'cfg(target_os = "linux")'.dependencies]
# `wayland_crate` re-exports a version-matched wayland-client (0.31, matching gtk4 0.9).
gdk4-wayland = { version = "0.9", features = ["wayland_crate"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "unstable"] }

# macOS pointer-lock via CGAssociateMouseAndMouseCursorPosition + NSEvent local monitor.
# No TCC permission required for local monitors.
[target.'cfg(target_os = "macos")'.dependencies]
# CGAssociateMouseAndMouseCursorPosition, CGDisplayHideCursor, kCGDirectMainDisplay.
core-graphics = "0.25"
# NSEvent (local monitor API + deltaX/deltaY), NSCursor (hide/unhide), NSEventMask.
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = { version = "0.3", features = [
    # pointer-lock (pre-existing)
    "NSEvent",
    "NSCursor",
    # native_titlebar: NSWindow titlebar configuration
    "NSWindow",
    "NSResponder",
    # native_titlebar: titlebar accessory view controller
    "NSTitlebarAccessoryViewController",
    "NSViewController",
    # native_titlebar: container view + subviews
    "NSView",
    # native_titlebar: NSButton action bridge
    "NSButton",
    "NSControl",
    # native_titlebar: NSImage (SF Symbol icons)
    "NSImage",
    # native_titlebar: NSLayoutAttribute::Right for accessory placement
    "NSLayoutConstraint",
] }
# Block closures for the addLocalMonitorForEventsMatchingMask:handler: callback.
block2 = "0.6"
